[project]
name = "bioease"
version = "1.0.0"
description = "生物信息学数据分析工具，TCGA 数据下载与生存分析"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "RomanCohort"}]
keywords = ["bioinformatics", "tcga", "survival-analysis", "r", "genomics"]

dependencies = [
    "requests>=2.31",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
